internal/gatewayapi/testdata/tcproute-with-backendtlspolicy.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    backendTLS:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: client-auth
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      name: client-auth
      namespace: envoy-gateway-system
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLRENDQWhDZ0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF4TUlWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUURFd2hVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBT1kySnVYMDJHMGplSjdBOURGbGQrclRtNGE3THJKWjYxTWJLUlVQMzVuVnl4LzAKdEFZKzJoVURUZVBpeG9ZWVU2VzVMS1NBR3Z0MnlubWtpd0RBWm9KZVBYYTNxbW14c2d5RnZrZU5tZ2oyS0lLRQpSYW9YY1R6emNzT [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRG1OaWJsOU5odEkzaWUKd1BReFpYZnEwNXVHdXk2eVdldFRHeWtWRDkrWjFjc2Y5TFFHUHRvVkEwM2o0c2FHR0ZPbHVTeWtnQnI3ZHNwNQpwSXNBd0dhQ1hqMTJ0NnBwc2JJTWhiNUhqWm9JOWlpQ2hFV3FGM0U4ODNMRHA3UkVkdHJISjdCeVNLbFVrN1JSCnhRV3pYL0lJaGJ2TTJIVzJWdDBQS0RuZ05CZ0p6Q0R3c1kxOVMyN1RwcG0vcldtRHhnM1JGYStKYkJ2TUx0elcKNXVVZVFQVUVxaFBnNDd4dUQ0Ny9nWER6c0lIbTZhU2d6d2dMcTA4VWY5UUI5OWk1bzB2SDVSSXdidnpxSWxpTQpLQlJmcHRlUlRUZ [...]
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tcp
          protocol: TCP
          port: 90
          allowedRoutes:
            namespaces:
              from: All
tcpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: TCPRoute
    metadata:
      namespace: default
      name: tcproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - name: rule-1
          backendRefs:
            - name: service-1
              port: 8080
backendTLSPolicies:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls-for-service-1
      namespace: default
    spec:
      targetRefs:
        - kind: Service
          name: service-1
      validation:
        wellKnownCACertificates: System
        hostname: example.com
        subjectAltNames:
          - type: URI
            uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
          - type: Hostname
            hostname: subdomain.secondexample.com
