internal/gatewayapi/testdata/tcproute-with-backendtlspolicy.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-for-service-1
    namespace: default
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: service-1
    validation:
      hostname: example.com
      subjectAltNames:
      - type: URI
        uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
      - hostname: subdomain.secondexample.com
        type: Hostname
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tcp
      port: 90
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          backendTLS:
            clientCertificateRef:
              group: ""
              kind: Secret
              name: client-auth
          logging: {}
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/tcp
        ports:
        - containerPort: 10090
          name: tcp-90
          protocol: TCP
          servicePort: 90
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: TCPRoute
  metadata:
    name: tcproute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      name: rule-1
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 90
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
      name: envoy-gateway/gateway-1/tcp
      port: 10090
      routes:
      - destination:
          metadata:
            kind: TCPRoute
            name: tcproute-1
            namespace: default
            sectionName: rule-1
          name: tcproute/default/tcproute-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: tcproute/default/tcproute-1/rule/-1/backend/0
            protocol: TCP
            tls:
              alpnProtocols: null
              caCertificate:
                name: policy-btls-for-service-1/default-ca
              clientCertificates:
              - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLRENDQWhDZ0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF4TUlWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUURFd2hVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBT1kySnVYMDJHMGplSjdBOURGbGQrclRtNGE3THJKWjYxTWJLUlVQMzVuVnl4LzAKdEFZKzJoVURUZVBpeG9ZWVU2VzVMS1NBR3Z0MnlubWtpd0RBWm9KZVBYYTNxbW14c2d5RnZrZU5tZ2oyS0lLRQp [...]
                name: envoy-gateway-system/client-auth
                privateKey: '[redacted]'
              maxVersion: "1.3"
              minVersion: "1.2"
              sni: example.com
              subjectAltNames:
              - uri: spiffe://cluster.local/ns/istio-demo/sa/echo-v1
              - hostname: subdomain.secondexample.com
              useSystemTrustStore: true
            weight: 1
        metadata:
          kind: TCPRoute
          name: tcproute-1
          namespace: default
        name: tcproute/default/tcproute-1
